src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Contact.Account.Id</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Score_Tier_On_Create__c</fullName>
        <description>Synced from Lead or Contact Activity Score Tier On Create</description>
        <inlineHelpText>Synced from Lead or Contact Activity Score Tier On Create</inlineHelpText>
        <label>Activity Score Tier (On Create)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Score_Tier_On_Update__c</fullName>
        <description>Synced from Lead or Contact Activity Score Tier On Update</description>
        <inlineHelpText>Synced from Lead or Contact Activity Score Tier On Update</inlineHelpText>
        <label>Activity Score Tier (On Update)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Actionable__c</fullName>
        <description>True if the response status was opened. Indicates response was actionable.</description>
        <formula>AND(
NOT(
OR(
ISPICKVAL(FCRM__FCR_Response_Status__c,&quot;Resolved - No Action Required&quot;), 
ISPICKVAL(FCRM__FCR_Response_Status__c,&quot;Resolved - Already Engaged&quot;), 
ISPICKVAL(FCRM__FCR_Response_Status__c,&quot;Not a Response&quot;),
ISPICKVAL(FCRM__FCR_Response_Status__c,&quot;Legacy&quot;),  
ISPICKVAL(FCRM__FCR_Response_Status__c,&quot;&quot;))
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if the response status was opened. Indicates response was actionable.</inlineHelpText>
        <label>Actionable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFCR_Count__c</fullName>
        <description>Evaluates to 1. Use for reporting to count responses.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Evaluates to 1. Use for reporting to count responses.</inlineHelpText>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Created_By_Formula__c</fullName>
        <description>Allows reporting visibility on who created the campaign member. The system field is not exposed in reports. Audit field.</description>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Allows reporting visibility on who created the campaign member. The system field is not exposed in reports. Audit field.</inlineHelpText>
        <label>Created By (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Current_Stage_In_Funnel_Date__c</fullName>
        <description>Displays funnel date for current stage in the funnel. Used for report filters.</description>
        <formula>IF ( 
OR( 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Resolved - No Action Required&quot; ),
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Resolved - Merged&quot; ),  
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Unqualified Forever&quot; ),
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Pending&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Recycled&quot; ),  
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Resolved - Already Engaged&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Resolved - Opportunity Deleted&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Resolved - Opportunity Lost&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Resolved - Opportunity Won&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Unmapped&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Legacy&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Not a Response&quot;)),NULL ,
IF(VO__c = TRUE, VO_Date__c, 
IF( 
AND( VO__c = FALSE, FCRM__FCR_SQR__c = TRUE), FCRM__FCR_SQR_Date__c, 
IF( 
AND( VO__c = FALSE, FCRM__FCR_SQR__c = FALSE, FCRM__FCR_SAR__c = TRUE ),  FCRM__FCR_SAR_Date__c , 
IF( 
AND( VO__c = FALSE, FCRM__FCR_SQR__c = FALSE, FCRM__FCR_SAR__c = FALSE,FCRM__FCR_QR__c = TRUE ),  FCRM__FCR_QR_Date__c , 
IF( 
AND( VO__c = FALSE, FCRM__FCR_SQR__c = FALSE, FCRM__FCR_SAR__c = FALSE,FCRM__FCR_QR__c = FALSE, FCRM__FCR_Inquiry_Target__c = TRUE ),  FCRM__FCR_Inquiry_Target_Date__c , 
 NULL ) 
)))))</formula>
        <inlineHelpText>Displays funnel date for current stage in the funnel. Used for report filters.</inlineHelpText>
        <label>Current Stage In Funnel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFCR_Current_Stage_in_Funnel__c</fullName>
        <description>indicates if a response is active in the funnel or not.</description>
        <formula>IF ( 
OR( 
ISPICKVAL(Status_Reason__c,&quot;SLA Expired - QL&quot; ), 
ISPICKVAL(Status_Reason__c,&quot;SLA Expired - SAL&quot; ) 
),&quot;SLA Expired&quot;, 
IF( 
OR( 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Resolved - No Action Required&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Resolved - Merged&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Pending&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Unmapped&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Legacy&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Not a Response&quot;)),&quot;Not QL Eligible&quot; , 
IF( 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Resolved - Already Engaged&quot; ),&quot;Already Engaged&quot;, 

IF( 
OR( 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Resolved - Opportunity Deleted&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Resolved - Opportunity Lost&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Resolved - Opportunity Won&quot; )), &quot;6. VO CLOSED&quot;, 

IF( 
OR( 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Unqualified Forever&quot; ), 
ISPICKVAL(FCRM__FCR_Response_Status__c, &quot;Recycled&quot; )),&quot;7. SRL&quot;, 

IF(VO__c = TRUE, &quot;5. VO&quot;, 
IF(AND( VO__c = FALSE, FCRM__FCR_SQR__c = TRUE), &quot;4. SQO&quot;, 
IF(AND( VO__c = FALSE, FCRM__FCR_SQR__c = FALSE, FCRM__FCR_SAR__c = TRUE ), &quot;3. SAL&quot;, 
IF(AND( VO__c = FALSE, FCRM__FCR_SQR__c = FALSE, FCRM__FCR_SAR__c = FALSE,FCRM__FCR_QR__c = TRUE ), &quot;2. QL&quot;, 
IF(AND( VO__c = FALSE, FCRM__FCR_SQR__c = FALSE, FCRM__FCR_SAR__c = FALSE,FCRM__FCR_QR__c = FALSE, FCRM__FCR_Inquiry_Target__c = TRUE ), &quot;1. Inquiry&quot;, 
&quot;UNDEFINED&quot;) 
)))))))))</formula>
        <inlineHelpText>indicates if a response is active in the funnel or not.</inlineHelpText>
        <label>Current Stage in Funnel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_FCCRM_Threshold_Current__c</fullName>
        <description>Current FCCRM Threshold score on the related lead/contact record</description>
        <formula>IF(NOT(ISBLANK( ContactId )), Contact.CFCR_FCCRM_Threshold__c ,Lead.CFCR_FCCRM_Threshold__c )</formula>
        <inlineHelpText>Current FCCRM Threshold score on the related lead/contact record</inlineHelpText>
        <label>FCCRM Threshold (Current)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_FCCRM_Threshold_On_Create__c</fullName>
        <description>Displays FCCRM Score threshold on create - populated by sync.</description>
        <inlineHelpText>Displays FCCRM Score threshold on create - populated by sync.</inlineHelpText>
        <label>FCCRM Threshold (On Create)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_First_Owner_Assigned_Role__c</fullName>
        <description>set with trigger - the role for the first owner assigned.</description>
        <inlineHelpText>set with trigger - the role for the first owner assigned.</inlineHelpText>
        <label>First Owner Assigned Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_First_Owner_Worked_Role__c</fullName>
        <description>set with trigger - the role for the first owner worked.</description>
        <inlineHelpText>set with trigger - the role for the first owner worked.</inlineHelpText>
        <label>First Owner Worked Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Industry_Formula__c</fullName>
        <description>Displays Industry of related lead or Account.</description>
        <formula>IF( NOT(ISBLANK(ContactId)), text( Contact.Account.Industry),
text(Lead.Industry))</formula>
        <inlineHelpText>Displays Industry of related lead or Account.</inlineHelpText>
        <label>Industry Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Infer_Rating_On_Create__c</fullName>
        <description>Infer field - value on related lead/contact synced to the response on create.</description>
        <inlineHelpText>Infer field - value on related lead/contact synced to the response on create.</inlineHelpText>
        <label>Infer: Rating (On Create)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Infer_Rating_On_Update__c</fullName>
        <description>Infer field - Synced on Update - Most recent value during the time a response is active.</description>
        <inlineHelpText>Infer field - Synced on Update - Most recent value during the time a response is active.</inlineHelpText>
        <label>Infer: Rating (On Update)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Infer_Score_On_Create__c</fullName>
        <description>Infer field - value on related lead/contact synced to the response on create.</description>
        <inlineHelpText>Infer field - value on related lead/contact synced to the response on create.</inlineHelpText>
        <label>Infer: Score (On Create)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Infer_Score_On_Update__c</fullName>
        <description>Infer field - Synced on Update - Most recent value during the time a response is active.</description>
        <inlineHelpText>Infer field - Synced on Update - Most recent value during the time a response is active.</inlineHelpText>
        <label>Infer: Score (On Update)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Inquiry_to_Close_WD__c</fullName>
        <description># WEEKDAYS from Inquiry to Closed/Won - Same day = 0, Evaluates to blank if SQL Date if blank. Weekdays is based on Org company settings.</description>
        <formula>IF( FCRM__FCR_Opportunity_Closed__c = &quot;True&quot;, 

 IF( CASE(MOD( FCRM__FCR_Inquiry_Target_Date__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c )/7)*5) &lt;=0 , 0, 

  CASE(MOD( FCRM__FCR_Inquiry_Target_Date__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_Inquiry_Target_Date__c )/7)*5) -1),  
null)</formula>
        <inlineHelpText># WEEKDAYS from Inquiry to Closed/Won - Same day = 0, Evaluates to blank if SQL Date if blank. Weekdays is based on Org company settings.</inlineHelpText>
        <label>Inquiry to Close WD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Inquiry_to_MQL_WD__c</fullName>
        <description># WEEKDAYS from Inquiry to MQL - Same day = 0, Evaluates to blank if SQL Date if blank. Weekdays is based on Org company settings.</description>
        <formula>IF(  FCRM__FCR_QR__c  = True, 
  IF(CASE(MOD( FCRM__FCR_Inquiry_Target_Date__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c )/7)*5) &lt;=0 , 0,
CASE(MOD( FCRM__FCR_Inquiry_Target_Date__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c )/7)*5) -1),
null)</formula>
        <inlineHelpText># WEEKDAYS from Inquiry to MQL - Same day = 0, Evaluates to blank if SQL Date if blank. Weekdays is based on Org company settings.</inlineHelpText>
        <label>Inquiry to MQL WD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Last_Interesting_Moment_Date__c</fullName>
        <description>Marketo field synced on create from related lead/contact</description>
        <inlineHelpText>Marketo field synced on create from related lead/contact</inlineHelpText>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CFCR_Last_Interesting_Moment_Desc__c</fullName>
        <description>Marketo field synced on create from related lead/contact</description>
        <inlineHelpText>Marketo field synced on create from related lead/contact</inlineHelpText>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CFCR_Last_Interesting_Moment_Source__c</fullName>
        <description>Marketo field synced on create from related lead/contact</description>
        <inlineHelpText>Marketo field synced on create from related lead/contact</inlineHelpText>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Last_Interesting_Moment_Type__c</fullName>
        <description>Marketo field synced on create from related lead/contact</description>
        <inlineHelpText>Marketo field synced on create from related lead/contact</inlineHelpText>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Last_Interesting_Moment__c</fullName>
        <description>Marketo field synced on create from related lead/contact</description>
        <formula>CFCR_Last_Interesting_Moment_Type__c &amp; &quot; - &quot; &amp; CFCR_Last_Interesting_Moment_Desc__c</formula>
        <inlineHelpText>Marketo field synced on create from related lead/contact</inlineHelpText>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Lead_Score_Most_Recent__c</fullName>
        <description>Synced on Update - Most recent lead score during the time a response is active.</description>
        <inlineHelpText>Synced on Update - Most recent lead score during the time a response is active.</inlineHelpText>
        <label>Lead Score (Most Recent)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Lead_Score_On_Create__c</fullName>
        <description>Synced on create - Lead Score when the response was created.</description>
        <inlineHelpText>Synced on create - Lead Score when the response was created.</inlineHelpText>
        <label>Lead Score (On Create)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_MQL_to_SAL_WD__c</fullName>
        <description># WEEKDAYS from MQL to SQL - Same day = 0, Evaluates to blank if SQL Date if blank. Weekdays is based on Org company settings.</description>
        <formula>IF (  FCRM__FCR_SAR__c = True, 

IF(  CASE(MOD( FCRM__FCR_QR_Date__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c )/7)*5) &lt;=0 , 0, 

  CASE(MOD( FCRM__FCR_QR_Date__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FCRM__FCR_SAR_Date__c - FCRM__FCR_QR_Date__c )/7)*5) -1), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># WEEKDAYS from MQL to SQL - Same day = 0, Evaluates to blank if SQL Date if blank. Weekdays is based on Org company settings.</inlineHelpText>
        <label>MQL to SAL WD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Manual_Adjustment_Notes__c</fullName>
        <description>Any administrative notes on the reason for the manual adjustment.</description>
        <inlineHelpText>Any administrative notes on the reason for the manual adjustment.</inlineHelpText>
        <label>Manual Adjustment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Manual_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrative field - set to true if you are doing a manual update and want the audit trail</description>
        <inlineHelpText>Administrative field - set to true if you are doing a manual update and want the audit trail</inlineHelpText>
        <label>Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFCR_Opportunity_18_Digit_ID__c</fullName>
        <description>Displays Opportunity 18 Digit ID for the related opportunity if the Opportunity name field is populated.</description>
        <formula>CASESAFEID( FCRM__FCR_Opportunity__c )</formula>
        <inlineHelpText>Displays Opportunity 18 Digit ID for the related opportunity if the Opportunity name field is populated.</inlineHelpText>
        <label>Opportunity 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Opportunity_Stage__c</fullName>
        <description>Displays stage of related opportunity if opportunity name is populated.</description>
        <formula>TEXT( FCRM__FCR_Opportunity__r.StageName )</formula>
        <inlineHelpText>Displays stage of related opportunity if opportunity name is populated.</inlineHelpText>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Opportunity_Type__c</fullName>
        <description>Displays type of related opportunity if opportunity name is populated.</description>
        <formula>TEXT( FCRM__FCR_Opportunity__r.Type )</formula>
        <inlineHelpText>Displays type of related opportunity if opportunity name is populated.</inlineHelpText>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_SAL_Owner_Role__c</fullName>
        <description>Set with trigger - the role for SAL Owner.</description>
        <inlineHelpText>Set with trigger - the role for SAL Owner.</inlineHelpText>
        <label>SAL Owner Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_SAL_to_SQL_WD__c</fullName>
        <description># WEEKDAYS from SAL to SQL - Same day = 0, Evaluates to blank if SQL Date if blank. Weekdays is based on Org company settings.</description>
        <formula>IF( FCRM__FCR_SQR__c = True, 
IF(  CASE(MOD( FCRM__FCR_SAR_Date__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c )/7)*5) &lt;=0 , 0, 

  CASE(MOD( FCRM__FCR_SAR_Date__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FCRM__FCR_SQR_Date__c - FCRM__FCR_SAR_Date__c )/7)*5) -1), 
null)</formula>
        <inlineHelpText># WEEKDAYS from SAL to SQL - Same day = 0, Evaluates to blank if SQL Date if blank. Weekdays is based on Org company settings.</inlineHelpText>
        <label>SAL to SQL WD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_SQL_to_VO_WD__c</fullName>
        <description># WEEKDAYS from SQL to VO - Same day = 0, Evaluates to blank if VO Date if blank. Weekdays is based on Org company settings.</description>
        <formula>IF( VO__c = True,
IF( CASE(MOD( FCRM__FCR_SQR_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( VO_Date__c - FCRM__FCR_SQR_Date__c )/7)*5) &lt;=0 , 0,

CASE(MOD( FCRM__FCR_SQR_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( VO_Date__c - FCRM__FCR_SQR_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( VO_Date__c - FCRM__FCR_SQR_Date__c )/7)*5) -1),
null)</formula>
        <inlineHelpText># WEEKDAYS from SQL to VO - Same day = 0, Evaluates to blank if VO Date if blank. Weekdays is based on Org company settings.</inlineHelpText>
        <label>SQL to VO WD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_SQL_to_VO_Won_WD__c</fullName>
        <description># WEEKDAYS from SQL to Closed/Won - Same day = 0, Evaluates to blank if SQL Date if blank. Weekdays is based on Org company settings.</description>
        <formula>IF( FCRM__FCR_Opportunity_Closed_Won__c = &quot;True&quot;, 
IF(  CASE(MOD( FCRM__FCR_SQR_Date__c  - DATE(1985,6,24),7), 
  0 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  )/7)*5) &lt;=0 , 0, 

  CASE(MOD( FCRM__FCR_SQR_Date__c  - DATE(1985,6,24),7), 
  0 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FCRM__FCR_Opportunity_Closed_Date__c - FCRM__FCR_SQR_Date__c  )/7)*5) -1), 
null)</formula>
        <inlineHelpText># WEEKDAYS from SQL to Closed/Won - Same day = 0, Evaluates to blank if SQL Date if blank. Weekdays is based on Org company settings.</inlineHelpText>
        <label>SQL to VO Won WD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_SRL_Date__c</fullName>
        <label>SRL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFCR_SRL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SRL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFCR_Still_in_Inquiry__c</fullName>
        <description>Checked if Current Stage in Funnel is &quot;1. Inquiry&quot;</description>
        <formula>CFCR_Current_Stage_in_Funnel__c = &quot;1. Inquiry&quot;</formula>
        <inlineHelpText>Checked if Current Stage in Funnel is &quot;1. Inquiry&quot;</inlineHelpText>
        <label>Still in Inquiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFCR_Still_in_QL__c</fullName>
        <description>Checked if Current Stage in Funnel is &quot;2. QL&quot;</description>
        <formula>CFCR_Current_Stage_in_Funnel__c = &quot;2. QL&quot;</formula>
        <inlineHelpText>Checked if Current Stage in Funnel is &quot;2. QL&quot;</inlineHelpText>
        <label>Still in QL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFCR_Still_in_SAL__c</fullName>
        <description>Checked if Current Stage in Funnel is &quot;3. SAL&quot;</description>
        <formula>CFCR_Current_Stage_in_Funnel__c = &quot;3. SAL&quot;</formula>
        <inlineHelpText>Checked if Current Stage in Funnel is &quot;3. SAL&quot;</inlineHelpText>
        <label>Still in SAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFCR_Still_in_SQO__c</fullName>
        <description>Checked if Current Stage in Funnel is &quot;4. SQO&quot;</description>
        <formula>CFCR_Current_Stage_in_Funnel__c = &quot;4. SQO&quot;</formula>
        <inlineHelpText>Checked if Current Stage in Funnel is &quot;4. SQO&quot;</inlineHelpText>
        <label>Still in SQO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFCR_Still_in_VO__c</fullName>
        <description>CFCR_Current_Stage_in_Funnel__c = &quot;4. SQO&quot;</description>
        <formula>CFCR_Current_Stage_in_Funnel__c = &quot;5. VO&quot;</formula>
        <inlineHelpText>CFCR_Current_Stage_in_Funnel__c = &quot;4. SQO&quot;</inlineHelpText>
        <label>Still in VO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFCR_VO_to_VO_Won_WD__c</fullName>
        <description># WEEKDAYS from VO to Closed/Won - Same day = 0, Evaluates to blank if VO Date if blank. Weekdays is based on Org company settings.</description>
        <formula>IF( FCRM__FCR_Opportunity_Closed_Won__c = &quot;True&quot;,
IF( CASE(MOD( VO_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c )/7)*5) &lt;=0 , 0,

CASE(MOD( FCRM__FCR_SQR_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c )/7)*5) -1),
null)</formula>
        <inlineHelpText># WEEKDAYS from VO to Closed/Won - Same day = 0, Evaluates to blank if VO Date if blank. Weekdays is based on Org company settings.</inlineHelpText>
        <label>VO to VO Won WD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRCR_Rescored_Date__c</fullName>
        <label>Rescored Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>